update calendar link

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -34,7 +34,7 @@
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
           <ul class="nav">
               <li><a href="{{ BASE_PATH }}#research">research</a></li>
-              <li><a href="https://calendar.google.com/calendar/embed?src=cegbhuoeetlh9pjso477hq6820@group.calendar.google.com&ctz=Asia/Seoul" target=_blank>calendar</a></li>
+              <li><a href="/calendar">calendar</a></li>
               <li><a href="{{ BASE_PATH }}#contact">contact</a></li>
           </ul>
         </div>
