--- a/assets/themes/twitter/css/leeky.css
+++ b/assets/themes/twitter/css/leeky.css
@@ -1,6 +1,9 @@
+* {
+  font-size: 100%;
+}
+
 code {
   padding: 0;
-  font-size: 90%;
   color: black;
   background-color: white;
   border: 0px solid white;
